#1192 : Fixed hidden vertical scrollbar in the ISE.

--- a/src/Spe/sitecore modules/PowerShell/Styles/ise.css
+++ b/src/Spe/sitecore modules/PowerShell/Styles/ise.css
@@ -422,3 +422,7 @@ a.ps-link {
 #CodeEditor * {
     font-family: inherit !important;
 }
+
+#CodeEditor {
+    width: calc(100% - 72px) !important;
+}
